<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Add necessary string values -->

    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="election_info"><b>Election Information</b></string>
    <string name="voting_locations"><![CDATA[ <a href="%s">Voting Locations</a> ]]></string>
    <string name="ballot_info"><![CDATA[ <a href="%s">Ballot Information </a> ]]></string>
    <string name="mailing_address">Mailing Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representative">My Representative</string>
    <string name="use_my_location">Use my location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

<!--    content descriptions -->
    <string name="twitter_link_for_the_representative">Twitter link for the representative</string>
    <string name="facebook_link_for_the_representative">Facebook link for the representative</string>
    <string name="website_link">Website link</string>
    <string name="representative_photo">Representative photo</string>

    <string name="this_location_is_not_supported">This location is not supported, please change your location</string>
    <string name="please_provide_the_address_of_representative">"Please provide the address of representative"</string>

</resources>
